# spline-rio

./: .claudeignore  .gitignore  .gitmodules  CHANGES.md  CLAUDE.md  README.md  REVIEW_RESPONSE.md  ToDo-md  ToDo.md  absolute-position-layer-design-study.md  analysis_structure.md  documentation.md  opus_review.md  review_decisions_pending.md  test_symforce_extrinsic.py
analysis/: FINDINGS.md  FINDINGS_PREINTEGRATION.md  IMPROVEMENTS.md  LIVE_RIO_SUMMARY.md  asan_minimal_test.py  calibrate_extrinsics.py  check_bag_topics.py  check_body_frame.py  check_doppler_sign.py  check_flight_direction.py  check_radar_topics.py  check_single_frame.py  comprehensive_sign_test.py  config_loader.py  derive_jacobians_symforce.py  detect_flight_windows.py  diagnose_doppler.py  diagnose_gyro.py  diagnose_imu_bias.py  dump_linear_system.py  eval_bags.py  frame_detail_3plus.py  generated_jacobians.py  nees_eval.py  notes.md  plot_radar_map.py  print_intensities.py  prototype_banded_solver.py  radar_velocity_utils.py  raw_velocity_distributions.py  reeval_results.py  requirements.txt  rosbags  session2_gate.py  sign_evolution_test.py  sweep_sw_params.py  test_bspline.py  test_bspline_debug.py  test_bspline_position.py  test_bspline_simple.py  (+10 more)
analysis/adaptive_knots/: nonuniform_bspline.py  placement.py  v0_basis_check.py  v1_representation_error.py  v1b_gyro_analysis.py  v1c_followup.py  v1d_gyro_only.py
analysis/codegen/: derive_jacobians_symforce.py  generated_jacobians.py
analysis/config/: bags.yaml  extrinsics.yaml  solver.yaml  solver_cpp.yaml  timing.yaml
analysis/diagnostics/: check_bag_topics.py  check_body_frame.py  check_doppler_sign.py  check_flight_direction.py  check_radar_topics.py  check_single_frame.py  comprehensive_sign_test.py  detect_flight_windows.py  diagnose_doppler.py  diagnose_doppler_sign.py  diagnose_gyro.py  diagnose_imu_bias.py  frame_detail_3plus.py  icins_zbias_probe.py  print_intensities.py  raw_velocity_distributions.py  reeval_results.py  sign_evolution_test.py  test_doppler_sensitivity.py  test_yaw_flip.py  time_offset_test.py  verify_gravity_residual.py  verify_state_data.py
analysis/eval_results/: baseline_20260324_202308.json  baseline_20260324_204613.json  baseline_20260324_205656.json  baseline_20260325_101446.json  preintegrated_20260325_101559.json  sweep_iter_20260603_174909.json  sweep_iter_20260603_175706.json  sweep_window_20260603_185017.json
analysis/isam_spike/: capture_problem.py  spline_factors.py  test_phase0a.py  test_phase0b.py  test_phase0c.py  test_phase0d.py  validate_isam_cpp.py
analysis/lib/: bspline_utils.py  cumulative_so3_bspline.py  imu_preintegration.py  odometry_metrics.py  radar_velocity_utils.py
analysis/lib/rosbag_loader/: RADAR_FIELDS.md  README.md  __init__.py  loader.py  structures.py
analysis/notebooks/: 01_rosbag_loader_example.ipynb  02_radar_time_sync.ipynb  03_radar_spline_fitting.ipynb  BSpline_Doppler_Tutorial.ipynb  Backward Model.md  Forward Model.md  bspline_dev.py  explore_imu_cov.py  polynomial.ipynb
analysis/plane_mapping/: diag_floor_stat.py  explore_structure.py  phase0_per_axis.py  plot_traj_gt_vs_est.py
analysis/rosbag_loader/: loader.py
analysis/tests/: test_bspline.py  test_bspline_debug.py  test_bspline_position.py  test_bspline_simple.py  test_generated.py  test_symforce_extrinsic.py
analysis/viz/: plot_extrinsics.py  plot_radar_map.py
baselines/: Dockerfile  README.md  run_bsweep_fast_ransac.sh  run_icins_ours.sh  run_oldfw_ransac.sh  run_ransac_rebench_A.sh  run_ransac_rebench_B.sh  setup.sh
baselines/adapters/: convert_bag_to_rio.py  convert_icins_to_ours.py  eval_rio_output.py  gen_rio_calib.py
baselines/configs/: calib_our_platform.yaml  ekf_rio_our_platform.yaml  icins_ekf-rio_rosbag.launch  our_bags_ekf-rio_rosbag.launch  our_bags_x-rio_rosbag.launch  reve_our_bags.launch  x_rio_our_platform.yaml
docker/: docker-compose.yml
documentation/: ALGO_IMPROVEMENTS.md  Backward Model.md  FINDINGS.md  Forward Model.md  ISAM2_MIGRATION.md  README.md  RESEARCH_NOTES.md  ROADMAP.md  Realtime_Options.md  SW_DEVELOPMENT.md  analysis_structure.md  solver_upgrade_plan.md
iwr6843-docker/: README.md
mmwave_ti_ros/ros1_driver/src/ti_mmwave_rospkg/cfg/: 6843AOP_best_velocity_no_clustering.cfg
mmwave_ti_ros/ros1_driver/src/ti_mmwave_rospkg/launch/: 6843AOP_velocity_3d.launch  (+1 more)
paper/: CHANGES.md  FROZEN.md  IEEE-conference-template-062824.tex  references.bib
paper/figures/: _gen_traj_figures_legacy.py  gen_combined_traj.py  gen_error_time.py  gen_paper_traj.py  gen_rpe.py
report/: COVER_LETTER.md  IEEE-conference-template-062824.tex  NOTES.md  PAPER_REPLAN.md  acronyms.tex  main.tex  references.bib
report/figures/: gen_combined_traj.py  gen_error_time.py  gen_paper_traj.py  gen_prior_scale.py  gen_realtime.py  gen_rpe.py
report/sections/: conclusion.tex  experimental_setup.tex  introduction.tex  limitations.tex  methodology.tex  related_work.tex  results.tex  system_overview.tex
report/supplementary/: ReadMe.txt  Summary.txt
rio_solver_cpp/: CMakeLists.txt  README.md
rio_solver_cpp/include/rio/: isam_sliding_window_solver.h  marginalization.h  sliding_window_solver.h  solver.h  trajectory.h
rio_solver_cpp/include/rio/factors/: bias_prior.h  gravity_direction.h  heading_prior.h  imu_accel.h  imu_gyro.h  imu_preintegration.h  radar_doppler.h  regularization.h
rio_solver_cpp/include/rio/factors/analytic/: accel_analytic.h  gyro_analytic.h  radar_analytic.h  radar_sensor_jac_gen.h  spline_jacobians.h
rio_solver_cpp/include/rio/gtsam/: accel_factor_math.h  factors.h  floor_factor_math.h  gyro_factor_math.h  heading_factor_math.h  radar_factor_math.h  radar_pos_only_factor_math.h  reg_factor_math.h
rio_solver_cpp/include/sym/: rot3.h
rio_solver_cpp/scripts/: build.sh
rio_solver_cpp/src/: isam_sliding_window_solver.cpp  pybind_isam.cpp  pybind_module.cpp  sliding_window_solver.cpp  solver.cpp
rio_solver_cpp/tests/: test_gtsam_factor_math.cpp  test_gtsam_factors.cpp  test_spline.cpp
t-ro/: NOTES.md  main.tex  references.bib
t-ro/figures/: gen_placeholder.py
(+1 files in other folders)
